# Tunisia-msa-parallel-corpus

./: README.md  main.py  pyproject.toml
notebooks/: Cell output 11 [DW].csv  dataset_evaluation.ipynb  dataset_evaluation_v2.ipynb  research.ipynb  tunisian-msa-parallel-corpus.ipynb
